<resources>
    <string name="app_name">My Portfolio</string>
    <string name="login_page">Login</string>
    <string name="signup_page">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Farhan Apri Kesuma</string>
    <string name="nav_header_subtitle_2">121140179</string>
    <string name="nav_header_subtitle">farhan.121140179@student.itera.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search for skill here&#8230;</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_skill">Skills</string>
    <string name="menu_skill_detail">Skill Detail</string>

    <string name="default_string_item">Programming Language</string>

    <string name="text_cpp">C++ Programming Language</string>
    <string name="text_c">C Programming Language</string>
    <string name="text_py">Python Programming Language</string>
    <string name="text_html">HTML Hypertext Language</string>
    <string name="text_css">CSS Stylesheet Language</string>
    <string name="text_js">JavaScript Programming</string>
    <string name="text_sql">MySQL Database Query</string>
    <string name="text_kt">Kotlin Programming Language</string>
    <string name="text_vsc">Visual Studio Code</string>
    <string name="text_android_studio">Android Studio</string>

    <string name="appBar_main_contentDesc">This is message</string>

    <string name="email_hint">Type your Email</string>
    <string name="password_hint">Type your Password</string>
    <string name="password_retype_hint">Retype your Password</string>
    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="not_registered">Not Registered Yet? Sign Up, Please</string>
    <string name="registered">Already Registered? Login, Please</string>
</resources>