<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_skill"
        android:name="com.example.app.ui.skill.SkillFragment"
        android:label="@string/menu_skill"
        tools:layout="@layout/fragment_skill">
        <action
            android:id="@+id/action_nav_skill_to_skill_detail"
            app:destination="@id/nav_skill_detail"/>
    </fragment>

    <fragment
        android:id="@+id/nav_skill_detail"
        android:name="com.example.app.ui.skill.SkillDetailFragment"
        android:label="@string/menu_skill_detail"
        tools:layout="@layout/fragment_skill_detail">
        <argument
            android:name="extra_name"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>